y.output
Terminals unused in grammar

   DOCTYPE


Grammar

    0 $accept: html_start $end

    1 html_start: HTML_S content_head content_body HTML_E

    2 content_head: HEAD_S content_head content_title content_head HEAD_E
    3             | DATA
    4             | %empty

    5 content_title: TITLE_S DATA TITLE_E

    6 content_body: BODY_S body BODY_E

    7 body: body href_tag data
    8     | body font_tag data
    9     | body center_tag data
   10     | body br_tag data
   11     | body p_tag data
   12     | body header_tag data
   13     | body list_tag data
   14     | body div_tag data
   15     | body format_tag data
   16     | body subsup_tag data
   17     | body img_tag data
   18     | body table_tag data
   19     | data

   20 data: data DATA
   21     | data GREEK
   22     | data COMMENT
   23     | %empty

   24 href_tag: HREF_S content_href body HREF_E

   25 content_href: content_href HREF_LINK
   26             | content_href HREF_TITLE
   27             | content_href HREF_NAME
   28             | %empty

   29 font_tag: FONT_S content_font body FONT_E

   30 content_font: content_font FONT_SIZE
   31             | %empty

   32 p_tag: P_S body P_E

   33 center_tag: CENTER_S body CENTER_E

   34 br_tag: BR
   35       | BR_S

   36 img_tag: IMG_S content_img IMG_E fig_caption
   37        | FIG_S IMG_S content_img IMG_E fig_caption FIG_E

   38 fig_caption: FIGCAP_S body FIGCAP_E
   39            | %empty

   40 content_img: content_img IMG_SRC
   41            | content_img IMG_HEIGHT
   42            | content_img IMG_WIDTH
   43            | %empty

   44 div_tag: DIV_S body DIV_E

   45 subsup_tag: SUP_S body SUP_E
   46           | SUB_S body SUB_E

   47 format_tag: U_S body U_E
   48           | B_S body B_E
   49           | I_S body I_E
   50           | EM_S body EM_E
   51           | TT_S body TT_E
   52           | STRONG_S body STRONG_E
   53           | SMALL_S body SMALL_E

   54 header_tag: H1_S body H1_E
   55           | H2_S body H2_E
   56           | H3_S body H3_E
   57           | H4_S body H4_E

   58 table_tag: TABLE_S content_table caption_data table_contents TABLE_E

   59 content_table: TABLE_BORDER
   60              | %empty

   61 table_contents: table_contents TR_S tr_data TR_E
   62               | %empty

   63 caption_data: CAPTION_S body CAPTION_E
   64             | %empty

   65 tr_data: tr_data TH_S body TH_E
   66        | tr_data TD_S body TD_E
   67        | %empty

   68 list_tag: UL_S inner_list_l UL_E
   69         | OL_S inner_list_l OL_E
   70         | DL_S inner_list_dl DL_E

   71 inner_list_l: inner_list_l LI_S body LI_E
   72             | inner_list_l UL_S inner_list_l UL_E
   73             | inner_list_l OL_S inner_list_l OL_E
   74             | inner_list_l DL_S inner_list_dl DL_E
   75             | %empty

   76 inner_list_dl: DD_S body DD_E inner_list_dl
   77              | DT_S body DT_E inner_list_dl
   78              | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
DOCTYPE (258)
HTML_S (259) 1
HTML_E (260) 1
HEAD_S (261) 2
HEAD_E (262) 2
TITLE_S (263) 5
TITLE_E (264) 5
BODY_S (265) 6
BODY_E (266) 6
HREF_S (267) 24
HREF_E (268) 24
FONT_S (269) 29
FONT_E (270) 29
CENTER_S (271) 33
CENTER_E (272) 33
BR (273) 34
P_S (274) 32
P_E (275) 32
H1_S (276) 54
H1_E (277) 54
H2_S (278) 55
H2_E (279) 55
H3_S (280) 56
H3_E (281) 56
H4_S (282) 57
H4_E (283) 57
UL_S (284) 68 72
UL_E (285) 68 72
LI_S (286) 71
LI_E (287) 71
OL_S (288) 69 73
OL_E (289) 69 73
TD_S (290) 66
DL_S (291) 70 74
TD_E (292) 66
DL_E (293) 70 74
DT_S (294) 77
DT_E (295) 77
DD_S (296) 76
DD_E (297) 76
DIV_S (298) 44
DIV_E (299) 44
U_S (300) 47
U_E (301) 47
B_S (302) 48
B_E (303) 48
I_S (304) 49
I_E (305) 49
EM_S (306) 50
EM_E (307) 50
TT_S (308) 51
TT_E (309) 51
STRONG_S (310) 52
STRONG_E (311) 52
SMALL_S (312) 53
SMALL_E (313) 53
SUB_S (314) 46
SUB_E (315) 46
SUP_S (316) 45
SUP_E (317) 45
TABLE_S (318) 58
TABLE_E (319) 58
CAPTION_S (320) 63
CAPTION_E (321) 63
TH_S (322) 65
TH_E (323) 65
TR_S (324) 61
TR_E (325) 61
HREF_LINK (326) 25
FONT_SIZE (327) 30
HREF_TITLE (328) 26
IMG_S (329) 36 37
IMG_SRC (330) 40
IMG_WIDTH (331) 42
IMG_HEIGHT (332) 41
FIG_S (333) 37
DATA (334) 3 5 20
GREEK (335) 21
TABLE_BORDER (336) 59
FIG_E (337) 37
IMG_E (338) 36 37
FIGCAP_S (339) 38
FIGCAP_E (340) 38
BR_S (341) 35
HREF_NAME (342) 27
COMMENT (343) 22


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
html_start (90)
    on left: 1, on right: 0
content_head (91)
    on left: 2 3 4, on right: 1 2
content_title (92)
    on left: 5, on right: 2
content_body (93)
    on left: 6, on right: 1
body (94)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19, on right: 6 7 8 9
    10 11 12 13 14 15 16 17 18 24 29 32 33 38 44 45 46 47 48 49 50
    51 52 53 54 55 56 57 63 65 66 71 76 77
data (95)
    on left: 20 21 22 23, on right: 7 8 9 10 11 12 13 14 15 16 17 18
    19 20 21 22
href_tag (96)
    on left: 24, on right: 7
content_href (97)
    on left: 25 26 27 28, on right: 24 25 26 27
font_tag (98)
    on left: 29, on right: 8
content_font (99)
    on left: 30 31, on right: 29 30
p_tag (100)
    on left: 32, on right: 11
center_tag (101)
    on left: 33, on right: 9
br_tag (102)
    on left: 34 35, on right: 10
img_tag (103)
    on left: 36 37, on right: 17
fig_caption (104)
    on left: 38 39, on right: 36 37
content_img (105)
    on left: 40 41 42 43, on right: 36 37 40 41 42
div_tag (106)
    on left: 44, on right: 14
subsup_tag (107)
    on left: 45 46, on right: 16
format_tag (108)
    on left: 47 48 49 50 51 52 53, on right: 15
header_tag (109)
    on left: 54 55 56 57, on right: 12
table_tag (110)
    on left: 58, on right: 18
content_table (111)
    on left: 59 60, on right: 58
table_contents (112)
    on left: 61 62, on right: 58 61
caption_data (113)
    on left: 63 64, on right: 58
tr_data (114)
    on left: 65 66 67, on right: 61 65 66
list_tag (115)
    on left: 68 69 70, on right: 13
inner_list_l (116)
    on left: 71 72 73 74 75, on right: 68 69 71 72 73 74
inner_list_dl (117)
    on left: 76 77 78, on right: 70 74 76 77


State 0

    0 $accept: . html_start $end

    HTML_S  shift, and go to state 1

    html_start  go to state 2


State 1

    1 html_start: HTML_S . content_head content_body HTML_E

    HEAD_S  shift, and go to state 3
    DATA    shift, and go to state 4

    $default  reduce using rule 4 (content_head)

    content_head  go to state 5


State 2

    0 $accept: html_start . $end

    $end  shift, and go to state 6


State 3

    2 content_head: HEAD_S . content_head content_title content_head HEAD_E

    HEAD_S  shift, and go to state 3
    DATA    shift, and go to state 4

    $default  reduce using rule 4 (content_head)

    content_head  go to state 7


State 4

    3 content_head: DATA .

    $default  reduce using rule 3 (content_head)


State 5

    1 html_start: HTML_S content_head . content_body HTML_E

    BODY_S  shift, and go to state 8

    content_body  go to state 9


State 6

    0 $accept: html_start $end .

    $default  accept


State 7

    2 content_head: HEAD_S content_head . content_title content_head HEAD_E

    TITLE_S  shift, and go to state 10

    content_title  go to state 11


State 8

    6 content_body: BODY_S . body BODY_E

    $default  reduce using rule 23 (data)

    body  go to state 12
    data  go to state 13


State 9

    1 html_start: HTML_S content_head content_body . HTML_E

    HTML_E  shift, and go to state 14


State 10

    5 content_title: TITLE_S . DATA TITLE_E

    DATA  shift, and go to state 15


State 11

    2 content_head: HEAD_S content_head content_title . content_head HEAD_E

    HEAD_S  shift, and go to state 3
    DATA    shift, and go to state 4

    $default  reduce using rule 4 (content_head)

    content_head  go to state 16


State 12

    6 content_body: BODY_S body . BODY_E
    7 body: body . href_tag data
    8     | body . font_tag data
    9     | body . center_tag data
   10     | body . br_tag data
   11     | body . p_tag data
   12     | body . header_tag data
   13     | body . list_tag data
   14     | body . div_tag data
   15     | body . format_tag data
   16     | body . subsup_tag data
   17     | body . img_tag data
   18     | body . table_tag data

    BODY_E    shift, and go to state 17
    HREF_S    shift, and go to state 18
    FONT_S    shift, and go to state 19
    CENTER_S  shift, and go to state 20
    BR        shift, and go to state 21
    P_S       shift, and go to state 22
    H1_S      shift, and go to state 23
    H2_S      shift, and go to state 24
    H3_S      shift, and go to state 25
    H4_S      shift, and go to state 26
    UL_S      shift, and go to state 27
    OL_S      shift, and go to state 28
    DL_S      shift, and go to state 29
    DIV_S     shift, and go to state 30
    U_S       shift, and go to state 31
    B_S       shift, and go to state 32
    I_S       shift, and go to state 33
    EM_S      shift, and go to state 34
    TT_S      shift, and go to state 35
    STRONG_S  shift, and go to state 36
    SMALL_S   shift, and go to state 37
    SUB_S     shift, and go to state 38
    SUP_S     shift, and go to state 39
    TABLE_S   shift, and go to state 40
    IMG_S     shift, and go to state 41
    FIG_S     shift, and go to state 42
    BR_S      shift, and go to state 43

    href_tag    go to state 44
    font_tag    go to state 45
    p_tag       go to state 46
    center_tag  go to state 47
    br_tag      go to state 48
    img_tag     go to state 49
    div_tag     go to state 50
    subsup_tag  go to state 51
    format_tag  go to state 52
    header_tag  go to state 53
    table_tag   go to state 54
    list_tag    go to state 55


State 13

   19 body: data .
   20 data: data . DATA
   21     | data . GREEK
   22     | data . COMMENT

    DATA     shift, and go to state 56
    GREEK    shift, and go to state 57
    COMMENT  shift, and go to state 58

    $default  reduce using rule 19 (body)


State 14

    1 html_start: HTML_S content_head content_body HTML_E .

    $default  reduce using rule 1 (html_start)


State 15

    5 content_title: TITLE_S DATA . TITLE_E

    TITLE_E  shift, and go to state 59


State 16

    2 content_head: HEAD_S content_head content_title content_head . HEAD_E

    HEAD_E  shift, and go to state 60


State 17

    6 content_body: BODY_S body BODY_E .

    $default  reduce using rule 6 (content_body)


State 18

   24 href_tag: HREF_S . content_href body HREF_E

    $default  reduce using rule 28 (content_href)

    content_href  go to state 61


State 19

   29 font_tag: FONT_S . content_font body FONT_E

    $default  reduce using rule 31 (content_font)

    content_font  go to state 62


State 20

   33 center_tag: CENTER_S . body CENTER_E

    $default  reduce using rule 23 (data)

    body  go to state 63
    data  go to state 13


State 21

   34 br_tag: BR .

    $default  reduce using rule 34 (br_tag)


State 22

   32 p_tag: P_S . body P_E

    $default  reduce using rule 23 (data)

    body  go to state 64
    data  go to state 13


State 23

   54 header_tag: H1_S . body H1_E

    $default  reduce using rule 23 (data)

    body  go to state 65
    data  go to state 13


State 24

   55 header_tag: H2_S . body H2_E

    $default  reduce using rule 23 (data)

    body  go to state 66
    data  go to state 13


State 25

   56 header_tag: H3_S . body H3_E

    $default  reduce using rule 23 (data)

    body  go to state 67
    data  go to state 13


State 26

   57 header_tag: H4_S . body H4_E

    $default  reduce using rule 23 (data)

    body  go to state 68
    data  go to state 13


State 27

   68 list_tag: UL_S . inner_list_l UL_E

    $default  reduce using rule 75 (inner_list_l)

    inner_list_l  go to state 69


State 28

   69 list_tag: OL_S . inner_list_l OL_E

    $default  reduce using rule 75 (inner_list_l)

    inner_list_l  go to state 70


State 29

   70 list_tag: DL_S . inner_list_dl DL_E

    DT_S  shift, and go to state 71
    DD_S  shift, and go to state 72

    $default  reduce using rule 78 (inner_list_dl)

    inner_list_dl  go to state 73


State 30

   44 div_tag: DIV_S . body DIV_E

    $default  reduce using rule 23 (data)

    body  go to state 74
    data  go to state 13


State 31

   47 format_tag: U_S . body U_E

    $default  reduce using rule 23 (data)

    body  go to state 75
    data  go to state 13


State 32

   48 format_tag: B_S . body B_E

    $default  reduce using rule 23 (data)

    body  go to state 76
    data  go to state 13


State 33

   49 format_tag: I_S . body I_E

    $default  reduce using rule 23 (data)

    body  go to state 77
    data  go to state 13


State 34

   50 format_tag: EM_S . body EM_E

    $default  reduce using rule 23 (data)

    body  go to state 78
    data  go to state 13


State 35

   51 format_tag: TT_S . body TT_E

    $default  reduce using rule 23 (data)

    body  go to state 79
    data  go to state 13


State 36

   52 format_tag: STRONG_S . body STRONG_E

    $default  reduce using rule 23 (data)

    body  go to state 80
    data  go to state 13


State 37

   53 format_tag: SMALL_S . body SMALL_E

    $default  reduce using rule 23 (data)

    body  go to state 81
    data  go to state 13


State 38

   46 subsup_tag: SUB_S . body SUB_E

    $default  reduce using rule 23 (data)

    body  go to state 82
    data  go to state 13


State 39

   45 subsup_tag: SUP_S . body SUP_E

    $default  reduce using rule 23 (data)

    body  go to state 83
    data  go to state 13


State 40

   58 table_tag: TABLE_S . content_table caption_data table_contents TABLE_E

    TABLE_BORDER  shift, and go to state 84

    $default  reduce using rule 60 (content_table)

    content_table  go to state 85


State 41

   36 img_tag: IMG_S . content_img IMG_E fig_caption

    $default  reduce using rule 43 (content_img)

    content_img  go to state 86


State 42

   37 img_tag: FIG_S . IMG_S content_img IMG_E fig_caption FIG_E

    IMG_S  shift, and go to state 87


State 43

   35 br_tag: BR_S .

    $default  reduce using rule 35 (br_tag)


State 44

    7 body: body href_tag . data

    $default  reduce using rule 23 (data)

    data  go to state 88


State 45

    8 body: body font_tag . data

    $default  reduce using rule 23 (data)

    data  go to state 89


State 46

   11 body: body p_tag . data

    $default  reduce using rule 23 (data)

    data  go to state 90


State 47

    9 body: body center_tag . data

    $default  reduce using rule 23 (data)

    data  go to state 91


State 48

   10 body: body br_tag . data

    $default  reduce using rule 23 (data)

    data  go to state 92


State 49

   17 body: body img_tag . data

    $default  reduce using rule 23 (data)

    data  go to state 93


State 50

   14 body: body div_tag . data

    $default  reduce using rule 23 (data)

    data  go to state 94


State 51

   16 body: body subsup_tag . data

    $default  reduce using rule 23 (data)

    data  go to state 95


State 52

   15 body: body format_tag . data

    $default  reduce using rule 23 (data)

    data  go to state 96


State 53

   12 body: body header_tag . data

    $default  reduce using rule 23 (data)

    data  go to state 97


State 54

   18 body: body table_tag . data

    $default  reduce using rule 23 (data)

    data  go to state 98


State 55

   13 body: body list_tag . data

    $default  reduce using rule 23 (data)

    data  go to state 99


State 56

   20 data: data DATA .

    $default  reduce using rule 20 (data)


State 57

   21 data: data GREEK .

    $default  reduce using rule 21 (data)


State 58

   22 data: data COMMENT .

    $default  reduce using rule 22 (data)


State 59

    5 content_title: TITLE_S DATA TITLE_E .

    $default  reduce using rule 5 (content_title)


State 60

    2 content_head: HEAD_S content_head content_title content_head HEAD_E .

    $default  reduce using rule 2 (content_head)


State 61

   24 href_tag: HREF_S content_href . body HREF_E
   25 content_href: content_href . HREF_LINK
   26             | content_href . HREF_TITLE
   27             | content_href . HREF_NAME

    HREF_LINK   shift, and go to state 100
    HREF_TITLE  shift, and go to state 101
    HREF_NAME   shift, and go to state 102

    $default  reduce using rule 23 (data)

    body  go to state 103
    data  go to state 13


State 62

   29 font_tag: FONT_S content_font . body FONT_E
   30 content_font: content_font . FONT_SIZE

    FONT_SIZE  shift, and go to state 104

    $default  reduce using rule 23 (data)

    body  go to state 105
    data  go to state 13


State 63

    7 body: body . href_tag data
    8     | body . font_tag data
    9     | body . center_tag data
   10     | body . br_tag data
   11     | body . p_tag data
   12     | body . header_tag data
   13     | body . list_tag data
   14     | body . div_tag data
   15     | body . format_tag data
   16     | body . subsup_tag data
   17     | body . img_tag data
   18     | body . table_tag data
   33 center_tag: CENTER_S body . CENTER_E

    HREF_S    shift, and go to state 18
    FONT_S    shift, and go to state 19
    CENTER_S  shift, and go to state 20
    CENTER_E  shift, and go to state 106
    BR        shift, and go to state 21
    P_S       shift, and go to state 22
    H1_S      shift, and go to state 23
    H2_S      shift, and go to state 24
    H3_S      shift, and go to state 25
    H4_S      shift, and go to state 26
    UL_S      shift, and go to state 27
    OL_S      shift, and go to state 28
    DL_S      shift, and go to state 29
    DIV_S     shift, and go to state 30
    U_S       shift, and go to state 31
    B_S       shift, and go to state 32
    I_S       shift, and go to state 33
    EM_S      shift, and go to state 34
    TT_S      shift, and go to state 35
    STRONG_S  shift, and go to state 36
    SMALL_S   shift, and go to state 37
    SUB_S     shift, and go to state 38
    SUP_S     shift, and go to state 39
    TABLE_S   shift, and go to state 40
    IMG_S     shift, and go to state 41
    FIG_S     shift, and go to state 42
    BR_S      shift, and go to state 43

    href_tag    go to state 44
    font_tag    go to state 45
    p_tag       go to state 46
    center_tag  go to state 47
    br_tag      go to state 48
    img_tag     go to state 49
    div_tag     go to state 50
    subsup_tag  go to state 51
    format_tag  go to state 52
    header_tag  go to state 53
    table_tag   go to state 54
    list_tag    go to state 55


State 64

    7 body: body . href_tag data
    8     | body . font_tag data
    9     | body . center_tag data
   10     | body . br_tag data
   11     | body . p_tag data
   12     | body . header_tag data
   13     | body . list_tag data
   14     | body . div_tag data
   15     | body . format_tag data
   16     | body . subsup_tag data
   17     | body . img_tag data
   18     | body . table_tag data
   32 p_tag: P_S body . P_E
